cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 14)


project(1)
add_executable(1 1/1.cpp)

project(2)
add_executable(2 2/2.cpp)

project(3)
add_executable(3 3/3.cpp)

project(4)
add_executable(4 4/4.cpp)

project(5)
add_executable(5 5/5.cpp)

project(6)
add_executable(6 6/6.cpp)

project(7)
add_executable(7 7/7.cpp)

project(8)
add_executable(8 8/8.cpp)

project(9)
add_executable(9 9/9.cpp)

project(10)
add_executable(10 10/10.cpp)

project(11)
add_executable(11 11/11.cpp)

project(12)
add_executable(12 12/12.cpp)

project(13)
add_executable(13 13/13.cpp)

project(14)
add_executable(14 14/14.cpp)

project(15)
add_executable(15 15/15.cpp)

project(16)
add_executable(16 16/16.cpp)

project(17)
add_executable(17 17/17.cpp)

project(18)
add_executable(18 18/18.cpp 18/Number.cpp 18/Number.h)


project(19)
add_executable(19 19/19.cpp 19/Point.cpp 19/Point.h 19/Scanner.cpp 19/Scanner.h)

project(20)
add_executable(20 20/20.cpp)